# eg-via

./: .gitignore  AGENTS.md
backend/: pyproject.toml
backend/src/backend/app/: __init__.py  main.py  orchestrator.py  policies.py  schemas.py  trace.py
backend/src/backend/app/retrieval/: __init__.py  base.py  clinvar.py  config.py  factory.py  multi.py
backend/tests/: conftest.py  test_clinvar_retrieval.py  test_contract.py  test_orchestrator_clinvar_integration.py
backend/tests/fixtures/clinvar/: esearch_success.json  esummary_success.json
eval/: README.md  pyproject.toml
eval/data/: seed_cases.jsonl
eval/src/eval/: __init__.py  checks.py  dataset.py  run.py
eval/tests/: test_checks.py  test_dataset.py
