[project]
name = "eval"
version = "0.1.0"
description = "Deterministic evaluation harness for EG-VIA"
readme = "README.md"
authors = [
    { name = "Aniruddhan Govindaraman", email = "gganirudh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[project.scripts]
eval = "eval.run:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
